Tests/Error/RetryOnly/.build/bareretrycatcher.pr
{
  "name": "BareRetryCatcher",
  "description": "Sets %bareRetryCaught% to true (null comparison noted in step text).",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %bareRetryCaught% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%bareRetryCaught%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Error/RetryOnly/BareRetryCatcher.goal",
  "prPath": "/Error/RetryOnly/.build/bareretrycatcher.pr",
  "hash": "721530b5266483f76149d388538696506be500e36c0e32b9216a91de8f854701",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}